--- a/gost/gost.service
+++ b/gost/gost.service
@@ -8,7 +8,7 @@ LimitCORE=infinity
 LimitNOFILE=512000
 LimitNPROC=512000
 Type=simple
-DynamicUser=true
+DynamicUser=yes
 StandardOutput=null
 #StandardError=journal
 WorkingDirectory=/opt/gost
