--- a/sysctl.conf
+++ b/sysctl.conf
@@ -6,7 +6,7 @@ apt install -y vim wget curl lrzsz tar lsof nmap dnsutils nload iperf3 screen cr
 }
 
 #调整时区
-time(){
+systime(){
 timedatectl set-timezone Asia/Shanghai
 )
 
@@ -154,7 +154,7 @@ check_bbr(){
 
 main(){
 apt
-time
+systime
 tcp_tune
 enable_forwarding
 ulimit_tune
